# CS50-Reader

./: README.md  app.py  article.py  auth.py  db.py  feed.py  fixdb.py  helpers.py  index.html  models.py  requirements.txt  schema.sql  styles.css  util.py
cs50reader/: README.md  __init__.py  app.py  article.py  cs50reader.db  feed.py  helpers.py  models.py  new_db.py  pyproject.toml  requirements.txt  sched.py  schema.sql
cs50reader/db/: db.py  models.py
cs50reader/static/: styles.css
cs50reader/templates/: com.chrome.devtools.json  index.html  layout.html  password.html  register.html
cs50reader/util/: helpers.py
cs50reader/views/: article.py  auth.py  feed.py  util.py
instance/: cs50reader.db
templates/: com.chrome.devtools.json  index.html  layout.html  login.html  register.html
